welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ')' expected but ';' found.
  var x=Math.min(a;b;c)
                  ^lessBy10:2: error: ';' expected but ')' found.
  var x=Math.min(a;b;c)
                      ^lessBy10:3: error: ';' expected but ')' found.
  var z=Math.max(a;b;c)
                      ^