welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  var x=Math.min(a;b;c)
  var z=Math.max(a;b;c)
  var d=0
  d=z-x
  if (d<=10){
    return true
  } else {
    return false
  }
}